# recommender-systems

./: .gitignore  Análisis_Exploratorio_Dataset_Empleados_F.ipynb  Análisis_Exploratorio_dataset_cursos_F.ipynb  LICENSE  Modelo_Sistema_Recomendador_F.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
clean datasets/: es_courses_udemy.csv
data/: LICENSE_docs.txt
data/processed/: 2_en_courses_9categories.csv
notebooks/: Modelo_Sistema_Recomendador_F_v2022.ipynb
outputs/batches/: recommendations_batch_01.csv  recommendations_batch_02.csv  recommendations_batch_03.csv  recommendations_batch_04.csv  recommendations_batch_05.csv  recommendations_batch_06.csv  recommendations_batch_07.csv  recommendations_batch_08.csv  recommendations_batch_09.csv  recommendations_batch_10.csv  recommendations_batch_11.csv
scripts/: batch_semantic_recommendation.py  semantic_engine_example.py  setup_path.py
src/recommender/: recommendation.py
src/recommender/interface/: export_results.py
src/training-recommender/engine/: semantic_engine.py
src/training_recommender/: recommendation.py
