[project]
name = "training-recommender"
version = "0.1.0"
description = "training recommender for employees"
authors = [
    {name = "juli-amezquita",email = "juli.amezquita@gmail.com"}
]
packages = [
    { include = "training_recommender", from = "src" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim (>=4.3.3,<5.0.0)",
    "scipy (>=1.13,<2.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=1.24,<2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pyldavis (>=3.4.1,<4.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (==2.2.2)",
    "sentence-transformers (==2.2.2)",
    "huggingface-hub (==0.14.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
